@@ -7,6 +7,7 @@ either one "#" sign or two for now; two is preferred going forward, i.e.
 ## coding:<someencoding>. 
 - a new multiline comment form of [PICK ONE:]"#* a comment *#"/"<%doc> a comment </%doc>"
 - UNDEFINED evaluates to False
+- improvement to scoping of "caller" variable when using <%call> tag
 
 0.1.2
 - fix to parsing of code/expression blocks to insure that non-ascii
